# pocker_game

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  config.ini  main.py  pyproject.toml
backend/src/: infrastructure.py  models.py  repository.py  servicies.py
backend/src/controllers/: pocker_controller.py
backend/src/infrastructure/: pocker_infrastructure.py  pocker_infrastructure_sqlite_memory.py
backend/src/models/: pocker_models.py
backend/src/repositories/: pocker_repository.py
backend/src/services/: pocker_services.py
backend/tests/: test_main.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/components/: ActionControls.tsx  CasinoTable.tsx  GameEndModal.tsx  HandDescription.tsx  HandHistory.tsx  HandHistoryPanel.tsx  HandLog.tsx  LandingPage.tsx  PlayerSeat.tsx  PlayingCard.tsx  PokerTable.tsx
frontend/app/components/ui/: sheet.tsx
frontend/app/services/: aiPlayer.ts  pockerApI.ts
frontend/app/store/: pockerStore.ts
frontend/app/types/: pockerTypes.ts
frontend/e2e/fixtures/: pocker-fixture.ts
frontend/e2e/page_objects/: pocker-game.page.ts
frontend/e2e/tests/: pocker-game.spec.ts
frontend/playwright-report/: index.html
