[tool.poetry]
name = "pocker-game"
version = "0.1.0"
description = "This is a package that simulates the game of pocker"
authors = ["Nahom Amare"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pokerkit = "^0.5.4"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
